--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 <ul class='list employee-list'></ul>
 </div>
 
+<script src="phonegap.js"></script>
 <script src="lib/jquery-1.9.1.min.js"></script>
 <script src="js/adapters/memory-adapter.js"></script>
 <script src="js/main.js"></script>
